Fixed z-index issue with CC on release pages

--- a/css/currency-converter.css
+++ b/css/currency-converter.css
@@ -11,7 +11,7 @@
   right: 0;
   transition: all 0.3s ease-in-out;
   width: 350px;
-  z-index: 1;
+  z-index: 2;
 }
 
 .currency-converter .ui-wrap {
